--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,8 @@
 .row-menu {
     background: rgb(3,77,140);
     background: linear-gradient(86deg, rgba(3,77,140,1) 0%, rgba(5,177,241,1) 60%); 
-    /* max-width: 100%; */
-    height: 500px; 
+    max-width: 100%;
+    /* height: 500px;  */
 }
 fas fa-user-friends {
     margin-top: -1.5%;
@@ -19,8 +19,26 @@ fas fa-user-friends {
     align-items: center;
   }
   input{
-      background-color: aquamarine;
+    background-color:  rgba(5,177,241,1);
+    width: 450px;
+    height: 55px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+     border-radius: 20px;
+     border: 1px solid #2d9fd9;    
   }
-  .row-1 h6,h7{
-    display: inline;
+  .btn-outline-success:hover {
+    background: linear-gradient(86deg, rgba(135,195,49,1) 0%, rgba(7,178,238,1) 65%);
+    color:red;
+    
+  }
+  .btn-outline-success{
+    border-color: gray;
+    color:gray;
+    /* width: 300px; */
+    height: 50px;
+
+  }
+
+  
   }
