--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,44 +1,80 @@
 .row-menu {
-    background: rgb(3,77,140);
-    background: linear-gradient(86deg, rgba(3,77,140,1) 0%, rgba(5,177,241,1) 60%); 
-    max-width: 100%;
-    /* height: 500px;  */
+  background: rgb(3, 77, 140);
+  background: linear-gradient(
+    86deg,
+    rgba(3, 77, 140, 1) 0%,
+    rgba(5, 177, 241, 1) 60%
+  );
+  max-width: 100%;
+  /* height: 500px;  */
 }
+
 fas fa-user-friends {
-    margin-top: -1.5%;
-    margin-left:-1.5%;
-    position: absolute;
+  margin-top: -1.5%;
+  margin-left: -1.5%;
+  position: absolute;
 }
+
 .form {
-    background-color: #4654e1;
-    width: 500px;
-    height: 44px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  input{
-    background-color:  rgba(5,177,241,1);
-    width: 450px;
-    height: 55px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-     border-radius: 20px;
-     border: 1px solid #2d9fd9;    
-  }
-  .btn-outline-success:hover {
-    background: linear-gradient(86deg, rgba(135,195,49,1) 0%, rgba(7,178,238,1) 65%);
-    color:red;
-    
-  }
-  .btn-outline-success{
-    border-color: gray;
-    color:gray;
-    /* width: 300px; */
-    height: 50px;
+  background-color: #4654e1;
+  width: 500px;
+  height: 44px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
-  }
+input {
+  background-color: rgba(5, 177, 241, 1);
+  width: 450px;
+  height: 55px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #2d9fd9;
+}
 
-  
-  }
+.btn-outline-success:hover {
+  background: linear-gradient(
+    86deg,
+    rgba(135, 195, 49, 1) 0%,
+    rgba(7, 178, 238, 1) 65%
+  );
+  color: red;
+}
+
+.btn-outline-success {
+  border-color: gray;
+  color: gray;
+  height: 50px;
+  width: 250px;
+}
+
+.section-titleofpage {
+  margin-top: 5%;
+}
+
+.section-titleofpage h6 {
+  color: blue;
+}
+
+.section-titleofpage h6 span {
+  color: darkblue;
+}
+
+.section-titleofpage h3 {
+  color: darkblue;
+}
+
+.section-titleofpage .row .col-sm-12 p {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom-style: solid;
+  border-bottom-width: medium;
+  border-bottom-color: gray;
+ 
+}
+
+.col-sm-12 button {
+}
