--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,17 @@
   max-width: 100%;
   /* height: 500px;  */
 }
+.container-fluid-heder{
+  background: rgb(3, 77, 140);
+  background: linear-gradient(
+    86deg,
+    rgba(3, 77, 140, 1) 0%,
+    rgba(5, 177, 241, 1) 60%
+  );
+  text-align: center;
+  color: white;
+
+}
 
 fas fa-user-friends {
   margin-top: -1.5%;
@@ -62,7 +73,7 @@ input {
 .section-titleofpage h6 span {
   color: darkblue;
 }
-
+-of-page
 .section-titleofpage h3 {
   color: darkblue;
 }
