--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,17 +51,47 @@
   color: white; 
   font-size: 25px;
 }
+.btnbtn-outline-success-first {
+  border-bottom-style: hidden;
+  border-left-style:hidden;
+  border-top-style: hidden;
+  border-radius: 0;
+  border-right: solid 2px;
+}
+.btnbtn-outline-success-second {
+  border-bottom-style: hidden;
+  border-left-style:hidden;
+  border-top-style: hidden;
+  border-radius: 0;
+  border-right: solid 2px;
+}
+.btnbtn-outline-success-tirth {
+  border-bottom-style: hidden;
+  border-left-style:hidden;
+  border-top-style: hidden;
+  border-radius: 0;
+  border-right: solid 2px;
+}
+.btnbtn-outline-success-fourth {
+  border-bottom-style: hidden;
+  border-left-style:hidden;
+  border-top-style: hidden;
+  border-right-style:hidden;
+  border-radius: 0;
+  border-right: solid 2px;
+}
+.btnbtn-outline-success-fifth {
+  border-bottom-style: hidden;
+  border-right-style:hidden;
+  border-left-style:hidden;
+  border-top-style: hidden;
+}
 .col-sm-12-button{
   color: gray;
 }
 .row-contenttype {
   margin-top: 100px; 
   text-align: center;
-  
-}
-.button{
-  border-top-style:solid 5px green;
-  border-bottom-style:none;
   
 }
 .container-fluid-heder{
@@ -101,6 +131,7 @@ input {
     rgba(135, 195, 49, 1) 0%,
     rgba(7, 178, 238, 1) 65%
   );
+  border-radius: 5px;
 }
 .btn-outline-success-load{
   background: linear-gradient(86deg, rgba(135, 195, 49, 1) 0%, rgba(7, 178, 238, 1) 65%);
@@ -113,7 +144,7 @@ input {
   width: 250px;
 }
 
-.section-titleofpage {
+/* .section-titleofpage {
   margin-top: 5%;
 }
 
@@ -127,21 +158,54 @@ input {
 -of-page
 .section-titleofpage h3 {
   color: darkblue;
+} */
+.row .col-sm-12-title-of-content h6{
+  margin-top: 100px;
+  font-size: 14.6px;
+  font-family: myriad-pro;
+  color: #4180c8;
 }
-
+.row .col-sm-12-title-of-content span{
+  color:#03356d;
+}
+.row .col-sm-12-title-of-content h3{
+  font-size: 26.6px;
+  font-family: myriad-pro;
+  color:#03356d;
+  margin-top: 30px;
+}
+.row .col-sm-12-title-of-content p{
+  font-size: 24px;
+  font-family: myriad-pro;
+  margin-top: 30px;
+  color:#03356d;
+}
 .section-titleofpage .row .col-sm-12 p {
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom-style: solid;
   border-bottom-width: medium;
-  border-bottom-color: gray;
+  border-bottom-color:#c0d5ea;
  
 }
-
-/* .col-sm-12 .btn btn-outline-success {
-  color: red;
-} */
-
+.row-contenttype {
+  margin-top:50px;
+  text-align: center;
+}
+.col-sm-12 .btn-outline-success-load {
+  padding: 1%;
+  width: 250px;
+}
+.fa fa-th{
+  margin-left: 30px;
+  color: #03356d;
+}
+.col-sm-4-membersarea {
+  float: left;
+  margin-bottom: 50px;
+  font-family:myriad-pro; 
+  color: #03356d;
+}
 .row-efpia{
   background: linear-gradient(
     86deg,
@@ -149,13 +213,62 @@ input {
     rgba(7, 178, 238, 1) 65%);
    margin-top: 50px;
   text-align: center;
-  padding-top: 150px;
+  padding-top: 100px;
   color: darkblue;
   max-width: 100%;
-
+  height: 150px;
+  text-align: center;
+}
+.justify-content-start{
+  margin-left: 50px;
+}
+.col-md-3 .row img{
+  position: absolute;
+  margin-top: -30px;
+  margin-left: -120px;
+}
+.col-md-3 .row h6{
+  position:relative;
+  margin-top: -30px;
+}
+.col-md-3-depr{
+  margin-top: -30px;
+}
+.col-sm-6-efpia{
+  margin-top: -65px;
+}
+.col-sm-6-efpia .row{
+  margin-left: 50%;
+}
+.col-md-3-img{
+  margin-top: 10px;
+}
+.icon{
+  padding-bottom: 50px;
+  float: right;
 
 }
 .row-footer{
 background-color: darkblue;
 max-width: 100%;
+padding: 40px;
+text-align: center;
+height: 150px;
+color: white;
+}
+.row-footer .col-sm-4 img{
+  margin-top: 25px;
+  margin-left: 25px;
+}
+.row-footer img{
+ float: left;
+}
+.col-sm-4-midle{
+  margin-top: 15px;
+}
+.col-sm-4-last{
+  margin-top:30px;
+}
+.fabfa-twitter-t{
+  margin-left: 150px;
 }
